Fix image distortion for mobile views

--- a/css/projectsection.css
+++ b/css/projectsection.css
@@ -264,5 +264,8 @@
 
     .flex-categories > img {
         width: auto;
+        min-height: 100%;
+        min-width: 100%;
+        object-fit: scale-down;
     }
   }
